Grease Pencil renders incorrectly when in edit-mode #63257

Closed
opened 2019-04-03 19:38:21 +02:00 by Joseph Brandenburg · 3 comments

System Information
Operating system: Darwin-17.6.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 560 OpenGL Engine ATI Technologies Inc. 4.1 ATI-1.66.42

Blender Version
Broken: version: 2.80 (sub 53), branch: blender2.7, commit date: 2019-03-31 21:52, hash: b936d7b16c
Worked: N/A (new feature)

Short description of error
Grease Pencil objects are displayed without any modifiers or effects in edit mode (unless "display modifier in edit mode" is selected). This is good, however, if an F12 render is performed, the edit mode object is what is rendered. Instead, the object should be rendered with effects and modifiers (according to the render settings of the modifiers/effects).

Exact steps for others to reproduce the error
greasePencilRenderBug.blend
Simply enter edit mode and press F12. Now, leave edit mode and press F12- look at the difference.
(If for some reason my .blend doesn't upload, just create a Great pencil object and add a modifier and an effect)

Thanks!

**System Information** Operating system: Darwin-17.6.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 560 OpenGL Engine ATI Technologies Inc. 4.1 ATI-1.66.42 **Blender Version** Broken: version: 2.80 (sub 53), branch: blender2.7, commit date: 2019-03-31 21:52, hash: `b936d7b16c` Worked: N/A (new feature) **Short description of error** Grease Pencil objects are displayed without any modifiers or effects in edit mode (unless "display modifier in edit mode" is selected). This is good, however, if an F12 render is performed, the edit mode object is what is rendered. Instead, the object should be rendered with effects and modifiers (according to the render settings of the modifiers/effects). **Exact steps for others to reproduce the error** [greasePencilRenderBug.blend](https://archive.blender.org/developer/F6909344/greasePencilRenderBug.blend) Simply enter edit mode and press F12. Now, leave edit mode and press F12- look at the difference. (If for some reason my .blend doesn't upload, just create a Great pencil object and add a modifier and an effect) Thanks!

Added subscriber: @Josephbburg

Added subscriber: @Josephbburg
Antonio Vazquez self-assigned this 2019-04-03 19:46:10 +02:00

This issue was referenced by aa0bb47576

This issue was referenced by aa0bb47576262b909183947815d7f626df82b35d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63257
No description provided.