Fix T63257: Grease Pencil renders incorrectly when in edit-mode